--- a/app/src/main/res/layout/activity_servicio.xml
+++ b/app/src/main/res/layout/activity_servicio.xml
@@ -25,4 +25,9 @@
         android:layout_height="wrap_content"
         android:text="Intent Service"
         android:onClick="MiIntentService"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mi BindService"
+        android:onClick="MiBindService"/>
 </LinearLayout>
